# homelab

./: .editorconfig  .env.sh.example  .gitignore  README.md  bindep.txt  homelab.sublime-project  pyproject.toml
ansible/: ansible.cfg  core-aap-bootstrap.yaml  core-bootstrap-old.yaml  core-bootstrap.yaml  core-patch.yaml  core-reboot.yml  core-registry-bootstrap.yaml  core-shutdown.yml  core-thunderbolt.yaml  core-wake.yml  core.yaml  core0-facts.json  nas-iscsi.yaml  op-connect.yaml  pki-setup.yaml  portal-patch.yaml  portal-reboot.yaml  portal-shutdown.yaml  portal-wake.yaml  portal.yaml  proxmox-bootstrap.yaml  step-ca.yaml  tank.yaml  test-vm.yaml
ansible/collections/: requirements.yaml  requirements.yml
ansible/inventory/: inventory.ini  static-inventory
ansible/tasks/: thunderbolt-network.yml
container-images/step-ca/: README.md  build-and-patch.sh  build-and-push.sh  entrypoint.sh  ubi10.hsm.Containerfile  ubi10.pkcs11.Containerfile
container-images/step-cli/: README.md  build-and-push.sh  ubi10.Containerfile
container-images/step-kms-plugin/: README.md  build-and-push.sh  ubi10.Containerfile  ubi10.pkcs11.Containerfile
containers/utils/: Containerfile
docs/: ansible-galaxy.md  certificate-authority.md  pkcs11.md  pki.md
docs/certificate-authority/: 1-root-ca.md  2-intermediate-ca.md  3-lab-intermediate-ca.md  README.md
dotfiles/.gnupg/: gnupg-pkcs11-scd.conf  gpg-agent.conf
openshift-gitops/: README.md
pki/: intermediate.crt  root.crt
scripts/: bootstrap-core.sh  setup.bash  setup.sh
step-ansible/: README.md
(+959 files in other folders)
